--- a/craftersmine.Valheim.WorldCleaner/craftersmine.Valheim.WorldCleaner.csproj
+++ b/craftersmine.Valheim.WorldCleaner/craftersmine.Valheim.WorldCleaner.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net461</TargetFramework>
     <AssemblyName>craftersmine.Valheim.WorldCleaner</AssemblyName>
     <Description>Valheim World Cleaner</Description>
-    <Version>0.0.1</Version>
+    <Version>0.0.3</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
@@ -21,6 +21,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Folder Include="ZNetScen\" />
+    <Reference Include="assembly_valheim">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\valheim_Data\Managed\assembly_valheim.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
